--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,13 @@
         android:layout_weight="2.7"
         android:orientation="vertical"
         android:weightSum="3">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="Files"
-            android:textSize="24dp"
+            android:text="@string/files"
             android:textColor="#000"
-            />
+            android:textSize="24dp" />
 
         <ListView
             android:id="@+id/fileList"
@@ -46,16 +46,17 @@
             android:layout_margin="4dp"
             android:layout_weight="1"
             android:onClick="takeData"
-            android:text="Take Data"
+            android:text="@string/take_data"
             android:textSize="2.3mm" />
+
         <Button
             android:id="@+id/createDir"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:onClick="createDir"
             android:layout_weight="1"
-            android:text="Create Director"
+            android:onClick="createDir"
+            android:text="@string/create_directory"
             android:textSize="2.3mm" />
     </LinearLayout>
 </LinearLayout>
