--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,4 +17,10 @@
     <style name="NewFontStyle" parent="android:Widget.TextView">
         <item name="android:textSize">20sp</item>
     </style>
+
+    <style name="TrainingHeaderFontStyle" parent="android:Widget.TextView">
+        <item name="android:textSize">25sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
