--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -31,7 +31,8 @@
                 android:text="@string/tabel_data_training"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:onClick="runTableActivity"/>
 
         </TableRow>
 
