--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -50,4 +50,33 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="NewFontStyleInTableActivityHeader" parent="android:Widget.TextView">
+        <item name="android:textSize">30dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginEnd">20dp</item>
+    </style>
+
+    <style name="NewFontStyleInTableActivityHeaderLight" parent="android:Widget.TextView">
+        <item name="android:textSize">30dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:background">#ffffff</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginEnd">20dp</item>
+    </style>
+
+    <style name="NewFontStyleInTableActivity" parent="android:Widget.TextView">
+        <item name="android:textSize">30dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+    </style>
+
 </resources>
