I added a template on new distance graphs in the general statistic activity

--- a/app/src/main/res/layout/activity_general_statistic.xml
+++ b/app/src/main/res/layout/activity_general_statistic.xml
@@ -257,6 +257,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/distance_graph"
+        android:onClick="runDistanceGraphActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
